gradle build  -x test -x checkstyleNohttp